# CellZ

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
python/cellz/: __init__.py  api.py
src/: bitstream.rs  compress.rs  decompress.rs  golomb_rice.rs  hybrid_value.rs  lib.rs  matrix.rs  varint.rs
tests/: compress_h5ad.py  test_roundtrip.py
tests/.ipynb_checkpoints/: compress_h5ad-checkpoint.py
