[package]
name = "cellz"
version = "0.1.0"
edition = "2024"

[lib]
name = "cellz"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
numpy = "0.23"
ndarray = "0.15"
byteorder = "1.5"
xz2 = { version = "0.1", optional = true }
rayon = "1"

[features]
default = ["xz"]
xz = ["xz2"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
